# Runway

./: .env.example  .gitignore  DEPLOY.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
agent/: package.json
agent/src/: deliberation.test.ts  deliberation.ts  fallback.test.ts  fallback.ts  index.ts
contracts/: README.md
contracts/runway_advance/: CHANGELOG.md  Cargo.toml  Odra.toml  README.md  casper-test.env
contracts/runway_advance/src/: lib.rs  runway_advance.rs
indexer/: package.json  tsconfig.json
indexer/src/: cspr-cloud.ts  features.test.ts  features.ts  index.ts
policy/: package.json
policy/src/: chain.ts  index.ts  policy.test.ts  policy.ts  treasury.ts  units.ts
shared/: package.json
shared/src/: index.ts
web/: next.config.ts  package.json
web/app/: layout.tsx  page.tsx
web/app/api/accept/: route.ts
web/app/api/assess/: route.ts
web/app/dashboard/: page.tsx
web/components/: casper-wallet.tsx  wallet-connect.tsx
web/components/dashboard/: advance-view.tsx  assess-view.tsx  deliberation-panel.tsx  onchain-footer.tsx  pool-card.tsx  pool-view.tsx  proof-view.tsx  revenue-chart.tsx
web/lib/: api.ts  format.ts  mock.ts  pools.ts  sim.ts
